Fix missing colors

--- a/_less/_components.header.less
+++ b/_less/_components.header.less
@@ -39,10 +39,10 @@ header {
   text-decoration: none;
 }
 
-.title:link {color:@header-background-color;}                                /* unvisited link */
-.title:visited {color:@header-background-color;}                             /* visited link */
-.title:hover {color:darken(@header-background-color, 10%);}                                   /* mouse over link */
-.title:active {color:@header-background-color;}                                  /* selected link */
+.title:link {color:#ffffff;}                                /* unvisited link */
+.title:visited {color:#ffffff;}                             /* visited link */
+.title:hover {color:@secondary;}                                   /* mouse over link */
+.title:active {color:#ffffff;}                                  /* selected link */
 
 nav {
 
@@ -143,6 +143,7 @@ nav {
   padding-top: 1rem;
   padding-left: 20%;
   border-top: @border;
+  border-color: #ffffff;
 }
 
 @media (max-width: @mobile-breakpoint) {
